--- a/index.html
+++ b/index.html
@@ -224,11 +224,11 @@
                         <img src="./images/back-1.jpg">
                         <div class="layer">
                             <h5>Henkel</h5>
-                            <p> Automate the deployment of a Java web application using a CI/CD pipeline. </p>
-                            <p> Configure networking (VPC, subnets, security groups) for the EKS cluster.</p>
-                            <p> Utilize Maven for build automation and dependency management.</p>
-                            <p> Use Kubernetes to orchestrate containerized applications, ensuring scalability and
-                                reliability.</p>
+                            <p><ol>Automate the deployment of a Java web application using a CI/CD pipeline.</ol> </p>
+                            <p><ol> Configure networking (VPC, subnets, security groups) for the EKS cluster.</ol></p>
+                            <p><ol>Utilize Maven for build automation and dependency management.</ol></p>
+                            <p><ol>Use Kubernetes to orchestrate containerized applications, ensuring scalability and
+                                reliability.</ol></p>
                             <a href="#"><i class='bx bx-link-external' style="color: aliceblue;"></i></a>
                         </div>
                     </div>
@@ -237,10 +237,10 @@
                         <img src="./images/back-2.jpeg">
                         <div class="layer">
                             <h5>PPG Industries</h5>
-                            <p> Automate the deployment of a web application using a CI/CD pipeline.</p>
-                            <p> Manage infrastructure and application configurations using Ansible.</p>
-                            <p> Host the application on AWS, leveraging its scalable and reliable infrastructure.</p>
-                            <p> Enhanced visibility and monitoring of application performance and issues. </p>
+                            <p> <ol>Automate the deployment of a web application using a CI/CD pipeline.</ol></p>
+                            <p> <ol>Manage infrastructure and application configurations using Ansible.</ol></p>
+                            <p> <ol>Host the application on AWS, leveraging its scalable and reliable infrastructure.</ol></p>
+                            <p> <ol>Enhanced visibility and monitoring of application performance and issues.</ol> </p>
                             <a href="#"><i class='bx bx-link-external' style="color: aliceblue;"></i></a>
                         </div>
                     </div>
