--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
             <h3>And I'm a <span class="text"></span></h3>
             <p>I'm a DevOps Engineer. <br />
                 My first exposure to professional life has benefited me mostly in strengthening my personal skills.
-                 I have developed a positive attitude and a strong sense of responsibility, being innovative,
-                  resourceful, open, and responsive to change. This experience has also fostered an 
-                  interest in lifelong learning..
+                I have developed a positive attitude and a strong sense of responsibility, being innovative,
+                resourceful, open, and responsive to change. This experience has also fostered an
+                interest in lifelong learning..
             </p>
             <div class="contact-icons">
                 <a href="https://www.facebook.com/profile.php?id=100008402261496&mibextid=LQQJ4d" style="--i:7"><i
@@ -122,96 +122,96 @@
 
     <section>
         <section class="remo">
-        <div class="container1" id="skills">
+            <div class="container1" id="skills">
 
-            <h1 class="heading1">Technical Skills</h1>
-            <div class="Technical-bars">
-                <div class="bar"><i style="color: #c95d2e" class='bx bxl-git'></i>
-                    <div class="info">
-                        <span>Git</span>
-                    </div>
-                    <div class="progress-line html">
-                        <span></span>
-                    </div>
-                </div><br />
-                <div class="bar"><i style="color: #147bbc" class='bx bxl-aws'></i>
-                    <div class="info">
-                        <span>AWS</span>
-                    </div>
-                    <div class="progress-line css">
-                        <span></span>
-                    </div>
-                </div><br />
-                <div class="bar"><i style="color: #b0bc1e" class='bx bxl-docker'></i>
-                    <div class="info">
-                        <span>Docker</span>
-                    </div>
-                    <div class="progress-line javaScript">
-                        <span></span>
-                    </div>
-                </div><br />
-                <div class="bar"><i style="color: #c32ec9" class='bx bxl-kubernetes'></i>
-                    <div class="info">
-                        <span>Kubernetes</span>
-                    </div>
-                    <div class="progress-line java">
-                        <span></span>
-                    </div>
-                </div><br />
-                <div class="bar"><i style="color: #69bcbc" class='bx bxl-terraform'></i>
-                    <div class="info">
-                        <span>Terraform</span>
-                    </div>
-                    <div class="progress-line react">
-                        <span> </span>
+                <h1 class="heading1">Technical Skills</h1>
+                <div class="Technical-bars">
+                    <div class="bar"><i style="color: #c95d2e" class='bx bxl-git'></i>
+                        <div class="info">
+                            <span>Git</span>
+                        </div>
+                        <div class="progress-line html">
+                            <span></span>
+                        </div>
+                    </div><br />
+                    <div class="bar"><i style="color: #147bbc" class='bx bxl-aws'></i>
+                        <div class="info">
+                            <span>AWS</span>
+                        </div>
+                        <div class="progress-line css">
+                            <span></span>
+                        </div>
+                    </div><br />
+                    <div class="bar"><i style="color: #b0bc1e" class='bx bxl-docker'></i>
+                        <div class="info">
+                            <span>Docker</span>
+                        </div>
+                        <div class="progress-line javaScript">
+                            <span></span>
+                        </div>
+                    </div><br />
+                    <div class="bar"><i style="color: #c32ec9" class='bx bxl-kubernetes'></i>
+                        <div class="info">
+                            <span>Kubernetes</span>
+                        </div>
+                        <div class="progress-line java">
+                            <span></span>
+                        </div>
+                    </div><br />
+                    <div class="bar"><i style="color: #69bcbc" class='bx bxl-terraform'></i>
+                        <div class="info">
+                            <span>Terraform</span>
+                        </div>
+                        <div class="progress-line react">
+                            <span> </span>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
-     <section class="remo">
-        <div class="container1">
-            <h1 class="heading1">Professional Skills</h1>
-            <div class="radial-bars">
+        </section>
+        <section class="remo">
+            <div class="container1">
+                <h1 class="heading1">Professional Skills</h1>
+                <div class="radial-bars">
 
-                <div class="radial-bar">
-                    <svg x="0px" y="0px" viewBox="0 0 200 200">
-                        <circle class="progress-bar" cx="100" cy="100" r="80"></circle>
-                        <circle class="path path-1" cx="100" cy="100" r="80"></circle>
-                    </svg>
-                    <div class="percentage">90%</div>
-                    <div class="text">Creativity</div>
-                </div>
+                    <div class="radial-bar">
+                        <svg x="0px" y="0px" viewBox="0 0 200 200">
+                            <circle class="progress-bar" cx="100" cy="100" r="80"></circle>
+                            <circle class="path path-1" cx="100" cy="100" r="80"></circle>
+                        </svg>
+                        <div class="percentage">90%</div>
+                        <div class="text">Creativity</div>
+                    </div>
 
-                <div class="radial-bar">
-                    <svg x="0px" y="0px" viewBox="0 0 200 200">
-                        <circle class="progress-bar" cx="100" cy="100" r="80"></circle>
-                        <circle class="path path-2" cx="100" cy="100" r="80"></circle>
-                    </svg>
-                    <div class="percentage">80%</div>
-                    <div class="text">Communication</div>
-                </div>
+                    <div class="radial-bar">
+                        <svg x="0px" y="0px" viewBox="0 0 200 200">
+                            <circle class="progress-bar" cx="100" cy="100" r="80"></circle>
+                            <circle class="path path-2" cx="100" cy="100" r="80"></circle>
+                        </svg>
+                        <div class="percentage">80%</div>
+                        <div class="text">Communication</div>
+                    </div>
 
-                <div class="radial-bar">
-                    <svg x="0px" y="0px" viewBox="0 0 200 200">
-                        <circle class="progress-bar" cx="100" cy="100" r="80"></circle>
-                        <circle class="path path-3" cx="100" cy="100" r="80"></circle>
-                    </svg>
-                    <div class="percentage">75%</div>
-                    <div class="text">Problem Solving</div>
-                </div>
+                    <div class="radial-bar">
+                        <svg x="0px" y="0px" viewBox="0 0 200 200">
+                            <circle class="progress-bar" cx="100" cy="100" r="80"></circle>
+                            <circle class="path path-3" cx="100" cy="100" r="80"></circle>
+                        </svg>
+                        <div class="percentage">75%</div>
+                        <div class="text">Problem Solving</div>
+                    </div>
 
-                <div class="radial-bar">
-                    <svg x="0px" y="0px" viewBox="0 0 200 200">
-                        <circle class="progress-bar" cx="100" cy="100" r="80"></circle>
-                        <circle class="path path-4" cx="100" cy="100" r="80"></circle>
-                    </svg>
-                    <div class="percentage">85%</div>
-                    <div class="text">TeamWork</div>
+                    <div class="radial-bar">
+                        <svg x="0px" y="0px" viewBox="0 0 200 200">
+                            <circle class="progress-bar" cx="100" cy="100" r="80"></circle>
+                            <circle class="path path-4" cx="100" cy="100" r="80"></circle>
+                        </svg>
+                        <div class="percentage">85%</div>
+                        <div class="text">TeamWork</div>
+                    </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
     </section>
 
     <section>
@@ -224,11 +224,19 @@
                         <img src="./images/back-1.jpg">
                         <div class="layer">
                             <h5>Henkel</h5>
-                            <p><li>Automate the deployment of a Java web application using a CI/CD pipeline.</li> </p>
-                            <p><li> Configure networking (VPC, subnets, security groups) for the EKS cluster.</li></p>
-                            <p><li>Utilize Maven for build automation and dependency management.</li></p>
-                            <p><li>Use Kubernetes to orchestrate containerized applications, ensuring scalability and
-                                reliability.</li></p>
+                            <p>
+                                <li>Automate the deployment of a Java web application using a CI/CD pipeline.</li>
+                            </p>
+                            <p>
+                                <li> Configure networking (VPC, subnets, security groups) for the EKS cluster.</li>
+                            </p>
+                            <p>
+                                <li>Utilize Maven for build automation and dependency management.</li>
+                            </p>
+                            <p>
+                                <li>Use Kubernetes to orchestrate containerized applications, ensuring scalability and
+                                    reliability.</li>
+                            </p>
                             <a href="#"><i class='bx bx-link-external' style="color: aliceblue;"></i></a>
                         </div>
                     </div>
@@ -237,10 +245,19 @@
                         <img src="./images/back-2.jpeg">
                         <div class="layer">
                             <h5>PPG Industries</h5>
-                            <p> <li>Automate the deployment of a web application using a CI/CD pipeline.</li></p>
-                            <p> <li>Manage infrastructure and application configurations using Ansible.</li></p>
-                            <p> <li>Host the application on AWS, leveraging its scalable and reliable infrastructure.</li></p>
-                            <p> <li>Enhanced visibility and monitoring of application performance and issues.</li> </p>
+                            <p>
+                                <li>Automate the deployment of a web application using a CI/CD pipeline.</li>
+                            </p>
+                            <p>
+                                <li>Manage infrastructure and application configurations using Ansible.</li>
+                            </p>
+                            <p>
+                                <li>Host the application on AWS, leveraging its scalable and reliable infrastructure.
+                                </li>
+                            </p>
+                            <p>
+                                <li>Enhanced visibility and monitoring of application performance and issues.</li>
+                            </p>
                             <a href="#"><i class='bx bx-link-external' style="color: aliceblue;"></i></a>
                         </div>
                     </div>
@@ -292,13 +309,13 @@
         </div>
 
         <div class="contact-form">
-            <form action="">
-                <input type="text" placeholder="Enter Your Name" required>
-                <input type="email" placeholder="Enter Your Email" required>
+            <form name="submit-to-google-sheet">
+                <input type="text" name="Name" placeholder="Enter Your Name" required>
+                <input type="email" name="Email" placeholder="Enter Your Email" required>
 
-                <input type="" placeholder="Enter Your Subject">
+                <input type="Subject" name="Subject" placeholder="Enter Your Subject">
 
-                <textarea name="" id="" cols="40" rows="10" placeholder="Enter Your Message" required></textarea>
+                <textarea name="Message" id="" cols="40" rows="10" placeholder="Enter Your Message" required></textarea>
 
                 <input type="submit" value="submit" class="send">
             </form>
@@ -313,6 +330,18 @@
 
 
 
+
+    <script>
+        const scriptURL = 'https://script.google.com/macros/s/AKfycbwP-fR6xcA12Qt4YlQ6_zEZznew_3YEqT3JJsOdJILzDhUqcRvlTCOXdQgKQqf-lg22/exec'
+        const form = document.forms['submit-to-google-sheet']
+
+        form.addEventListener('submit', e => {
+            e.preventDefault()
+            fetch(scriptURL, { method: 'POST', body: new FormData(form) })
+                .then(response => console.log('Success!', response))
+                .catch(error => console.error('Error!', error.message))
+        })
+    </script>
 
 
 
