--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         class='bx bxl-facebook'></i></a>
                 <a href="https://www.instagram.com/revanthreddyremo?igsh=YWhnd2c1ZXU0bXRk&utm_source=qr"
                     style="--i:8"><i class='bx bxl-instagram'></i></a>
-                <a href="Wa.me/+917973775836" style="--i:9"><i class='bx bxl-whatsapp'></i></a>
+                <a href="https://wa.me/+917973775836" style="--i:9"><i class='bx bxl-whatsapp'></i></a>
                 <a href="https://www.linkedin.com/in/revanth-reddy-n-10b569313/" style="--i:10"><i
                         class='bx bxl-linkedin'></i></a>
             </div>
@@ -301,7 +301,7 @@
             <div class="contact-icons">
                 <a href="https://www.facebook.com/profile.php?id=100008402261496&mibextid=LQQJ4d"><i
                         class='bx bxl-facebook-circle'></i></a>
-                <a href="Wa.me/+917973775836"><i class='bx bxl-whatsapp'></i></a>
+                <a href="https://wa.me/+917973775836"><i class='bx bxl-whatsapp'></i></a>
                 <a href="https://www.instagram.com/revanthreddyremo?igsh=YWhnd2c1ZXU0bXRk&utm_source=qr"><i
                         class='bx bxl-instagram'></i></a>
                 <a href="https://www.linkedin.com/in/revanth-reddy-n-10b569313/"><i class='bx bxl-linkedin'></i></a>
