--- a/index.html
+++ b/index.html
@@ -41,13 +41,32 @@
                         class='bx bxl-facebook'></i></a>
                 <a href="https://www.instagram.com/revanthreddyremo?igsh=YWhnd2c1ZXU0bXRk&utm_source=qr"
                     style="--i:8"><i class='bx bxl-instagram'></i></a>
-                <a href="https://wa.me/+917973775836" style="--i:9"><i class='bx bxl-whatsapp'></i></a>
+                <a href="Wa.me/+917973775836" style="--i:9"><i class='bx bxl-whatsapp'></i></a>
                 <a href="https://www.linkedin.com/in/revanth-reddy-n-10b569313/" style="--i:10"><i
                         class='bx bxl-linkedin'></i></a>
             </div>
             <a href="RevanthResu.pdf" download class="btn-box">Download Resume</a>
         </div>
         <span class="home-imgHover"></span>
+        <!------------ Ball Effect ------------------------->
+        <div class="boll">
+            <div class="main-container">
+                <div class="bottom-right">
+                    <div class="ball-circle">
+                        <div class="ball"></div>
+                    </div>
+                    <div class="main-circle"></div>
+                    <div class="circle2">
+                        <img src="images/circlelogo.png" alt="" />
+                    </div>
+                    <div class="shot-circle">
+                        <img src="images/shape.svg" alt="" />
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!---------------- Ball effect End------------- -->
+
     </section>
 
     <section class="about" id="about">
