--- a/index.html
+++ b/index.html
@@ -70,9 +70,65 @@
     </section>
 
     <section class="about" id="about">
-        <div class="about-img">
+        <!-- <div class="about-img">
             <img src="./images/About2.jpeg" alt="">
-        </div>
+        </div> -->
+        <!------- ------------infinity loop--------------- -->
+        <section>
+
+            <div class="container">
+                <div class="circle">
+                    <span style="--i:0;"></span>
+                    <span style="--i:1;"></span>
+                    <span style="--i:2;"></span>
+                    <span style="--i:3;"></span>
+                    <span style="--i:4;"></span>
+                    <span style="--i:5;"></span>
+                    <span style="--i:6;"></span>
+                    <span style="--i:7;"></span>
+                    <span style="--i:8;"></span>
+                    <span style="--i:9;"></span>
+                    <span style="--i:10;"></span>
+                    <span style="--i:11;"></span>
+                    <span style="--i:12;"></span>
+                    <span style="--i:13;"></span>
+                    <span style="--i:14;"></span>
+                    <span style="--i:15;"></span>
+                    <span style="--i:16;"></span>
+                    <span style="--i:17;"></span>
+                    <span style="--i:18;"></span>
+                    <span style="--i:19;"></span>
+                    <span style="--i:20;"></span>
+                </div>
+                <div class="circle">
+                    <span style="--i:0;"></span>
+                    <span style="--i:1;"></span>
+                    <span style="--i:2;"></span>
+                    <span style="--i:3;"></span>
+                    <span style="--i:4;"></span>
+                    <span style="--i:5;"></span>
+                    <span style="--i:6;"></span>
+                    <span style="--i:7;"></span>
+                    <span style="--i:8;"></span>
+                    <span style="--i:9;"></span>
+                    <span style="--i:10;"></span>
+                    <span style="--i:11;"></span>
+                    <span style="--i:12;"></span>
+                    <span style="--i:13;"></span>
+                    <span style="--i:14;"></span>
+                    <span style="--i:15;"></span>
+                    <span style="--i:16;"></span>
+                    <span style="--i:17;"></span>
+                    <span style="--i:18;"></span>
+                    <span style="--i:19;"></span>
+                    <span style="--i:20;"></span>
+                </div>
+
+
+            </div>
+
+        </section>
+
         <div class="about-text">
             <h2>About <span>Me</span></h2>
             <h4>DevOps Engineer!</h4>
@@ -195,8 +251,9 @@
 
                     <div class="radial-bar">
                         <svg x="0px" y="0px" viewBox="0 0 200 200">
-                            <circle class="progress-bar" cx="100" cy="100" r="80"></circle>
-                            <circle class="path path-1" cx="100" cy="100" r="80"></circle>
+                            < class="progress-bar" cx="100" cy="100" r="80">
+                                </circle>
+                                <circle class="path path-1" cx="100" cy="100" r="80"></circle>
                         </svg>
                         <div class="percentage">90%</div>
                         <div class="text">Creativity</div>
